# Cubist

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: main.yml  release.yml  tests.yml
Cubist/: QuinlanAttributes.py  cubist.py  makeDataFile.py  makeNamesFile.py
Cubist/src/: contin.c  discr.c  extern.h  getdata.c  instance.c  regress.c  rules.c  sort.c  top.c  transform.h
Cubist/src_RuleQuest/: discr.c  formrules.c  getnames.c  rules.c
Cubist/src_RuleQuest/src/: contin.c  predict.c  text.i  xval  xval.c
benchmarks/: california.py  friedman1.py  mlens_benchmark.py  modeltree.py
cubist/: QuinlanAttributes.py  __init__.py  _attribute_usage.py  _base_cubist_display.py  _cubist.pxi  _cubist.pyx  _cubist_display_mixin.py  _make_data_file.py  _make_data_string.py  _make_names_file.py  _make_names_string.py  _parse_cubist_model.py  _parse_model.py  _quinlan_attributes.py  _utils.py  _var_usage.py  _variable_usage.py  cubist.py  cubist_coefficient_display.py  cubist_coverage_display.py  dotplot.py  exceptions.py  makeNamesFile.py  make_data_file.py  make_names_file.py  quinlan_attributes.py  setup.py  version.py  viz.py
cubist/src/: construct.c  contin.c  defns.h  discr.c  extern.h  formrules.c  formtree.c  getdata.c  getnames.c  global.c  hash.c  hash.h  implicitatt.c  instance.c  modelfiles.c  predict.c  prunetree.c  rcubist.c  redefine.c  redefine.h  regress.c  rsample.c  rulebasedmodels.c  rulebasedmodels.h  rules.c  sample.c  sort.c  stats.c  strbuf.c  strbuf.h  text.h  time.cpp  top.c  transform.h  trees.c  update.c  utility.c  xval.c
cubist/src_RuleQuest/: Makefile  construct.c  cubist.c  formtree.c  global.c  instance.c  modelfiles.c  prunetree.c  sort.c  stats.c  summary.c  trees.c  update.c
cubist/tests/: conftest.py  test.py  test_attribute_usage.py  test_coefficient_display.py  test_common.py  test_coverage_display.py  test_cubist.py  test_cubist_display_mixin.py  test_datasets.py  test_dotplot.py  test_exceptions.py  test_make_names_string.py  test_quinlan_attributes.py  test_utils.py  test_variable_usage.py  test_viz.py
docs/: Makefile  conf.py  index.rst
docs/api/: cubist.rst  cubist_coefficient_display.rst  cubist_coverage_display.rst  exceptions.rst  model.rst  visualizations.rst
docs/getting_started/: install.rst  installation.rst
docs/usage/: cubist.rst  model.rst  visualizations.rst
examples/: california_housing.py  iris.py  jwgda.py  viz.ipynb
notebooks/: R_cubist_flow.Rmd
src/: defns.i  extern.i  getdata.c  implicitatt.c  regress.c  utility.c
sys/: times.cpp  times.h
tests/: test.py  test_attribute_usage.py  test_coefficient_display.py  test_common.py  test_coverage_display.py  test_cubist.py  test_cubist_display_mixin.py  test_datasets.py  test_quinlan_attributes.py  test_utils.py
winsys/: time.h  times.cpp  times.h
