[build-system]
requires = [
  "setuptools",
  "wheel",
  "build",
  "cython",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "cubist"
version = "1.1.0"
requires-python = ">= 3.10"
authors = [
  {name = "Ross Quinlan"},
  {name = "Max Kuhn"},
  {name = "Patrick Aselin"},
]
maintainers = [
  {name = "Patrick Aselin"}
]
description="A Python package for fitting Ross Quinlan's Cubist regression model."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "pandas>=2.2.2",
  "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
  "coverage",
  "mypy"
]
typing = [
  "pandas-stubs",
  "types-setuptools"
]
viz = [
  "matplotlib"
]
docs = [
  "Sphinx>=7.3.7",
  "furo>=2024.8.6",
  "sphinx-copybutton>=0.5.2",
  "matplotlib>=3.5.0",
  "sphinx-design>=0.6.1",
  "numpydoc>=1.8.0",
  "sphinx-autobuild>=2024.10.3"
]

[project.urls]
Homepage = "https://github.com/pjaselin/Cubist"
Repository = "https://github.com/pjaselin/Cubist.git"
Issues = "https://github.com/pjaselin/Cubist/issues"

[tool.setuptools]
packages = [
  "cubist",
  "cubist.src"
]

[tool.pytest.ini_options]
addopts = "-v -s"
filterwarnings = "ignore:np.asscalar:DeprecationWarning"

[tool.coverage.run]
branch = true
omit = [
  "*/tests/*"
]

[tool.coverage.report]
skip_covered = true

[tool.isort]
known_first_party = ["_cubist"]
profile = "black"

[tool.doc8]
ignore = ["D001"]

[tool.mypy]
exclude = [
  "docs/",
  "cubist/tests/",
  "setup.py",
  "cubist/cubist_coefficient_display.py",
  "cubist/cubist_coverage_display.py",
]
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
]
ignore_errors = true
follow_imports = "skip"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
  "_cubist.*",
  "Cython.Build.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "cubist.cubist_coefficient_display",
  "cubist.cubist_coverage_display",
]
follow_imports = "skip"
ignore_errors = true
follow_untyped_imports = true
disable_error_code = "index,attr-defined"
