[build-system]
requires = [
  "setuptools",
  "wheel",
  "build",
  "cython",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "cubist"
version = "1.2.1"
requires-python = ">= 3.10"
authors = [
  {name = "Ross Quinlan"},
  {name = "Max Kuhn"},
  {name = "Patrick Aselin"},
]
maintainers = [
  {name = "Patrick Aselin"}
]
description="A Python package for fitting Ross Quinlan's Cubist regression model."
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy",
  "pandas>=2.2.2",
  "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "coverage>=7.11.2",
    "cython>=3.2.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "setuptools>=80.9.0",
    "types-setuptools>=80.9.0.20250822",
]
docs = [
    "furo>=2025.9.25",
    "matplotlib",
    "numpydoc>=1.9.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/pjaselin/Cubist"
Repository = "https://github.com/pjaselin/Cubist.git"
Issues = "https://github.com/pjaselin/Cubist/issues"

[tool.setuptools]
packages = [
  "cubist",
  "cubist.src"
]

[tool.pytest.ini_options]
addopts = "-v -s"
filterwarnings = "ignore:np.asscalar:DeprecationWarning"

[tool.coverage.run]
branch = true
omit = [
  "*/tests/*"
]

[tool.coverage.report]
skip_covered = true

[tool.isort]
known_first_party = ["_cubist"]
profile = "black"

[tool.doc8]
ignore = ["D001"]

[tool.mypy]
exclude = [
  "docs/",
  "tests/",
  "setup.py",
  "cubist/cubist_coefficient_display.py",
  "cubist/cubist_coverage_display.py",
]
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
]
ignore_errors = true
follow_imports = "skip"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
  "_cubist.*",
  "Cython.Build.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "cubist.cubist_coefficient_display",
  "cubist.cubist_coverage_display",
]
follow_imports = "skip"
ignore_errors = true
follow_untyped_imports = true
disable_error_code = "index,attr-defined"
